Format entire code base